# myEspTrezor

./: CMakeLists.txt  README.md  file_list.txt  nem.c  nem.h  nem_serialize.h
